bug 209097: Default mailto form subject should be localizable patch by Chris Thomas (CTho) <cst@andrew.cmu.edu>, r=neil, sr=roc